2004-01-01  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/pluck.c (filter3Set): Need to initialise ->x1 and ->x2
	to zero

	* Opcodes/flanger.c (wguide2, wguide1): Avoid frequencies below 5Hz

2003-11-30	Steven Yi	<stevenyi@csounds.com>
	* Engine/insert.c (orcompact): Added calls to deinitialize i-time opcodes

2003-11-29	Steven Yi 	<stevenyi@csounds.com>

	* H/cs.h: all thing except compability macros moved out to csoundCore.h
	
	* H/csoundCore.h: contains everything except compability macros
	
	* Top/csound.c: edited to use ENVIRON, #include csoundCore.h instead of 
	cs.h (macros were getting in the way of compiling), still needs to be 
	reconciled with main.c::csoundCompile before being usable
	
2003-11-25  John ffitch  <jpff@codemist.co.uk>

	* OOps/vbap_zak.c (vbap_zak_moving_init): Fix zastart/zkstart

	* Opcodes/bowedbar.c (make_DLineN): Envionment as argument

	* Opcodes/scansynx.c (listget): Added environment as argument and
	in calls

	* H/csdl.h (perferror): Point via p->h.insdshead->csound-> and
	name changes

	* H/cs.h (GLOBALS_): Added _ to names in many places

	* Top/dl_opcodes.c (csoundLoadExternals): resetter function needs
	environment as argument

	* Top/jpff_glue.c (csoundReset): Added argument of environment

2003-11-22  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/grain.c (ags): Check gcount against 1 rather than 0.1

2003-11-07  John D. Ramsdell  <ramsdell@mitre.org>

	* Top/getstring.c (init_getstring): The default location for the
	csound.xmg file is passed in by defining XMGDIR to be a directory
	string.

2003-11-05  John  <jpff@codemist.co.uk>

	* util2/sndinfo/main.c (main): 
	* util2/dnoise.dir/srconv.c (main): 
	* util2/dnoise.dir/dnoise.c (main): Initialise e0dbfs in main as
	it is now in O structure

2003-11-05  John ffitch  <jpff@codemist.co.uk>

	* Opcodes/ugens6.c: reverb was not declared in opcode table

2003-11-04  John D. Ramsdell  <ramsdell@mitre.org>

	* configure.in: Added AM_INIT_AUTOMAKE, AM_PROG_CC_STDC, and code